package com.gbccccc.javafxdrawer.gui.canvas.element;

public interface ElementFactoryListener {
    void onBuildingFinished(CanvasElement element);

    void onBuildingChanged();
}
